--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,28 +1,34 @@
 name: build-and-push
 on:
   workflow_dispatch:
-  push:
-    branches: [ main ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      packages: write   # 关键：允许推送到 GHCR
+      packages: write
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-buildx-action@v3
+
+      # 把 repository_owner 转小写
+      - name: lower-case owner
+        run: echo "OWNER_LC=${OWNER,,}" >> $GITHUB_ENV
+        env:
+          OWNER: ${{ github.repository_owner }}  # 这里可能有大写
+
       - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}  # 官方支持用 GITHUB_TOKEN 推到 GHCR
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Build & Push
         uses: docker/build-push-action@v6
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/newapi-claw:latest
           platforms: linux/amd64
+          tags: ghcr.io/${{ env.OWNER_LC }}/newapi-claw:latest
